# compress

./: .clang-format  CMakeLists.txt  README.md  globals.h  huffman.cpp  huffman.h  main  main.cpp
data/: Spinoza_Ethics
